internationalized "no a11y" message

--- a/raspberrymem.pot
+++ b/raspberrymem.pot
@@ -139,3 +139,5 @@ msgid "sdevopts"
 msgstr "developer options"
 msgid "scredits"
 msgstr "credits"
+msgid "snoa11y"
+msgstr "Unfortunately, accessibility support is not available in this version."
