added internationalization strings for remote-prefs file to po template(will update actual catalogues later) added better error checking to the remote-prefs script ; if cancel is pressed nothing is changed.

--- a/raspberrymem.pot
+++ b/raspberrymem.pot
@@ -141,3 +141,7 @@ msgid "scredits"
 msgstr "credits"
 msgid "snoa11y"
 msgstr "Unfortunately, accessibility support is not available in this version."
+msgid "shost"
+msgstr "set server hostname/IP address"
+msgid "shostprompt"
+msgstr "Enter the hostname or IP address of the server to register with."
