added "device id" to po template, will update actual catalogues later. updated "about this device" to use the new deviceid msgid

--- a/raspberrymem.pot
+++ b/raspberrymem.pot
@@ -145,3 +145,5 @@ msgid "shost"
 msgstr "set server hostname/IP address"
 msgid "shostprompt"
 msgstr "Enter the hostname or IP address of the server to register with."
+msgid "deviceid"
+msgstr "device ID"
