Internationalized the system generated "your timer is up" notification by adding a new message to the po template(will update catalogues later) and referencing that new message from the timer.

--- a/raspberrymem.pot
+++ b/raspberrymem.pot
@@ -147,3 +147,5 @@ msgid "shostprompt"
 msgstr "Enter the hostname or IP address of the server to register with."
 msgid "deviceid"
 msgstr "device ID"
+msgid "tup"
+msgstr "Your timer is up."
