--- a/es_MX.po
+++ b/es_MX.po
@@ -3,22 +3,19 @@ msgstr ""
 "Project-Id-Version: Raspberrymem\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: Humberto Ruiz(A.K.A. The Honest Thief) <hber2.0@gmail.com>\n"
+"Last-Translator: Bill Dengler(A.K.A. Billkd) <billkd314159@gmail.com>\n"
 "Language-Team: team 2065 <raspberrymem@googlegroups.com>\n"
+"Language: es-MX\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.5.4\n"
-"Language: es-MX\n"
 
 msgid "depcheck"
-msgstr "Performando checke de dependencia. por favor espera."
+msgstr "depcheck"
 
 msgid "welcome"
-msgstr ""
-"Bienvenidos a Raspberrymem! Conque esta es la primera ves que eusas "
-"Raspberrymem, necesitas a responder a  unas preguntas. No teva tomar largo, "
-"te lo prometo!"
+msgstr "Bienvenidos a Raspberrymem! Conque esta es la primera ves que eusas Raspberrymem, necesitas a responder a  unas preguntas. No teva tomar largo, te lo prometo!"
 
 msgid "fn"
 msgstr "Que es tu nombre primero?"
@@ -27,14 +24,10 @@ msgid "ln"
 msgstr "Que es tu nombre familiar?"
 
 msgid "registermsg"
-msgstr ""
-"Raspberrymem esta attemptando a registrar te con el servedor. Por favor "
-"espera."
+msgstr "Raspberrymem esta attemptando a registrar te con el servedor. Por favor espera."
 
 msgid "registerfailedmsg"
-msgstr ""
-"registration fracasso. Usual mente quiede desir que el servedor no sirve al "
-"momento. Raspberrymem va attemptar a registrar otra ves en un momento."
+msgstr "registration fracasso. Usual mente quiede desir que el servedor no sirve al momento. Raspberrymem va attemptar a registrar otra ves en un momento."
 
 msgid "next"
 msgstr "sigiente"
@@ -52,21 +45,10 @@ msgid "yearprompt"
 msgstr "Pon el numbero del año, por ejemplo 1982"
 
 msgid "knt1"
-msgstr ""
-"Bienvenidos a Raspberrymem! Usa tu teclado para navegar el interface de "
-"usuario de Raspberrymem. Esta es una tutorial corta que te va a enseñiar te "
-"como usar tu teclado a navegar y familiar te con los controles de "
-"Raspberrymem. Para empezar, pressiona la lliave de enter en tu teclado."
+msgstr "Bienvenidos a Raspberrymem! Usa tu teclado para navegar el interface de usuario de Raspberrymem. Esta es una tutorial corta que te va a enseñiar te como usar tu teclado a navegar y familiar te con los controles de Raspberrymem. Para empezar, pressiona la lliave de enter en tu teclado."
 
 msgid "knt2"
-msgstr ""
-"Casi todo las pantyas de Raspberrymem tiene buttones de sigiente y atras. El "
-"button sigiente va mover una pantaya por enfrente, o submitir information tu "
-"has puesto or una selection tu hisiste de un menu. El button atras, when "
-"available, va mover te deregesso al la pantaya previous. Para pressionar el "
-"button sigiente, pressiona el enter key en tu teclado. Para pressionar el "
-"button atras, pressiona el ESC key en tu teclado. Pressiona el buttpn "
-"sigente ahora para contininuar."
+msgstr "Casi todo las pantyas de Raspberrymem tiene buttones de sigiente y atras. El button sigiente va mover una pantaya por enfrente, o submitir information tu has puesto or una selection tu hisiste de un menu. El button atras, when available, va mover te deregesso al la pantaya previous. Para pressionar el button sigiente, pressiona el enter key en tu teclado. Para pressionar el button atras, pressiona el ESC key en tu teclado. Pressiona el buttpn sigente ahora para contininuar."
 
 msgid "reminders"
 msgstr "schedule a reminder"
@@ -87,9 +69,7 @@ msgid "notifications"
 msgstr "read your notifications"
 
 msgid "knt3"
-msgstr ""
-"choose an option with the arrow keys, and then press next to continue. it "
-"doesn't matter what option you pick, this is just a tutorial."
+msgstr "choose an option with the arrow keys, and then press next to continue. it doesn't matter what option you pick, this is just a tutorial."
 
 msgid "knt31"
 msgstr "the first example option"
@@ -98,10 +78,7 @@ msgid "knt32"
 msgstr "the second example option"
 
 msgid "knt4"
-msgstr ""
-"choose multiple options - use the arrow keys to move to an option, and then "
-"press the space bar to toggle it's selection, When your done, press next to "
-"continue."
+msgstr "choose multiple options - use the arrow keys to move to an option, and then press the space bar to toggle it's selection, When your done, press next to continue."
 
 msgid "knt41"
 msgstr "an example option"
@@ -113,10 +90,7 @@ msgid "knt5"
 msgstr "enter a date by following the prompts."
 
 msgid "knt6"
-msgstr ""
-"choose a time with the timebox. Remember, the left and right arrows move "
-"between values, up and down arrows change values. Then press next to finish "
-"the tutorial."
+msgstr "choose a time with the timebox. Remember, the left and right arrows move between values, up and down arrows change values. Then press next to finish the tutorial."
 
 msgid "otr"
 msgstr "one time reminder - goes off only once"
@@ -125,8 +99,7 @@ msgid "rr"
 msgstr "recurring reminder - goes off weekly on days you specify"
 
 msgid "remindertypemsg"
-msgstr ""
-"choose the type of reminder you wish to create, then press next to continue."
+msgstr "choose the type of reminder you wish to create, then press next to continue."
 
 msgid "seconds"
 msgstr "seconds"
@@ -150,23 +123,16 @@ msgid "rdate"
 msgstr "entering  the reminder date"
 
 msgid "rtime"
-msgstr ""
-"enter the reminder time. Use the up and down arrow keys to change values, "
-"and the left and right arrows to move between values. When done, press next."
+msgstr "enter the reminder time. Use the up and down arrow keys to change values, and the left and right arrows to move between values. When done, press next."
 
 msgid "rmsg"
-msgstr ""
-"enter the reminder message and then press next to finish setting your "
-"reminder."
+msgstr "enter the reminder message and then press next to finish setting your reminder."
 
 msgid "rtitle"
 msgstr "give your reminder a name. For example, pills"
 
 msgid "rdaysprompt"
-msgstr ""
-"select the days of the week that this reminder should go off on. Use the up "
-"and down arrows to move between days, and space bar to toggle their "
-"selection. Then press next to continue"
+msgstr "select the days of the week that this reminder should go off on. Use the up and down arrows to move between days, and space bar to toggle their selection. Then press next to continue"
 
 msgid "sunday"
 msgstr "domingo"
@@ -233,3 +199,24 @@ msgstr "developer options"
 
 msgid "scredits"
 msgstr "credits"
+
+#, fuzzy
+msgid "snoa11y"
+msgstr "accessibility"
+
+msgid "shost"
+msgstr "set server hostname/IP address"
+
+#, fuzzy
+msgid "shostprompt"
+msgstr "select a setting to change"
+
+msgid "deviceid"
+msgstr "device ID"
+
+msgid "tup"
+msgstr "Your timer is up."
+
+msgid "dismiss"
+msgstr "dismiss"
+
