set up release and trunk branches, updated devopts file to incorporate new branches, and added new messages to message catalogues.

--- a/raspberrymem.pot
+++ b/raspberrymem.pot
@@ -151,3 +151,10 @@ msgid "tup"
 msgstr "Your timer is up."
 msgid "dismiss"
 msgstr "dismiss"
+msgid "branchselprompt"
+msgstr "select the bazaar branch to switch to : "
+msgid "release"
+msgstr "release - raspberrymem releases/milestones(recommended)"
+msgid "trunk"
+msgstr "trunk - trunk code from bazaar(experimental/not recommended)"
+
