--- a/raspberrymem.pot
+++ b/raspberrymem.pot
@@ -1,3 +1,16 @@
+msgid ""
+msgstr ""
+"Project-Id-Version: Raspberrymem\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: Bill Dengler(A.K.A. Billkd) <billkd314159@gmail.com>\n"
+"Language-Team: team 2065 <raspberrymem@googlegroups.com>\n"
+"Language: en-US\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
+
 msgid "depcheck"
 msgstr "Performing a dependancy check, please wait. This may take some time."
 msgid "welcome"
