--- a/en_US.po
+++ b/en_US.po
@@ -5,7 +5,7 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: Bill Dengler(A.K.A. Billkd) <billkd314159@gmail.com>\n"
 "Language-Team: team 2065 <raspberrymem@googlegroups.com>\n"
-"Language: en-US\n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
