--- a/es_MX.po
+++ b/es_MX.po
@@ -5,7 +5,7 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: Humberto I. Ruiz <hber2.0@gmail.com>\n"
 "Language-Team: team 2065 <raspberrymem@googlegroups.com>\n"
-"Language: es-MX\n"
+"Language: es_MX\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
