--- a/raspberrymem.pot
+++ b/raspberrymem.pot
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Raspberrymem\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: Billkd<billkd314159@gmail.com> \n"
 "POT-Creation-Date: 2013-02-13 15:01+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Bill Dengler(A.K.A. Billkd) <billkd314159@gmail.com>\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2013-02-13 20:52+0000\n"
 "X-Generator: Launchpad (build 16491)\n"
-"Language: en-US\n"
+"Language: en_US\n"
 
 msgid "depcheck"
 msgstr ""
