Updated English and Mexican Spanish translations and incorporated new string into the code.

--- a/en_US.po
+++ b/en_US.po
@@ -226,3 +226,5 @@ msgstr "release - raspberrymem releases/milestones(recommended)"
 msgid "trunk"
 msgstr "trunk - trunk code from bazaar(experimental/not recommended)"
 
+msgid "wait"
+msgstr "Please wait"
